style: :art: preparo index

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto JS</title>
+    <title>AdventJS</title>
     <meta name="description" content="Proyecto JS">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/work_team_e_color.png">
-    <link rel="apple-touch-icon" href="assets/work_team_e_color.png">
-    <link rel="apple-touch-startup-image" href="assets/work_team_e_color.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/logo_javascript_color.png">
+    <link rel="apple-touch-icon" href="assets/logo_javascript_color.png">
+    <link rel="apple-touch-startup-image" href="assets/logo_javascript_color.png">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="web/style.css">
     <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet"/>
@@ -18,11 +18,11 @@
 <body>
     <header>
         <h1>
-            <img height="160" alt="working" src="assets/work_team_e_color.png">
+            <img height="160" alt="working" src="assets/logo_javascript_color.png">
         </h1>
     </header>
     <main class="content">
-        <h1>Preguntas Clave para tu Proyecto</h1>
+        <h1>Retos AdventJS</h1>
     <div class="tips-container" id="tips-container">
         <!-- Aquí se insertarán dinámicamente las cards -->
     </div>
